# lightWeightECS

./: README.md  entity.h  globals.h  systems.h  testMain.cpp
ExtremePong/: CMakeLists.txt  readme.md  readme.txt
ExtremePong/include/: components.h  entity.h  globals.h  systems.h
ExtremePong/src/: main.cpp  systems.cpp
multiThreadedTest/: components.h  systems.h
pong/: components.h  globals.h  pongMain.cpp  systems.h
quadTreeCollisions/: components.h  globals.h  quadTree.h  systems.h  testMain.cpp
test/: components.h  entity.h  globals.h  systems.h  testMain.cpp
